@@ -1,6 +1,12 @@
 NAME
     Data::InfoBox - Data object for info box.
 
+DESCRIPTION
+    Data objects for definition of common infobox which contains structured
+    informations. The informations are in form of text description
+    (optionaly with icon) and some value. It's used on e.g. Wikipedia
+    article as table on top of the page.
+
 SYNOPSIS
      use Data::InfoBox;
 
