@@ -34,6 +34,12 @@ __END__
 
 Data::InfoBox - Data object for info box.
 
+=head1 DESCRIPTION
+
+Data objects for definition of common infobox which contains structured
+informations. The informations are in form of text description (optionaly with icon)
+and some value. It's used on e.g. Wikipedia article as table on top of the page.
+
 =head1 SYNOPSIS
 
  use Data::InfoBox;
